--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,15 @@
             <version>4.2.3</version>
             <type>pom</type>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jopendocument</groupId>-->
+<!--            <artifactId>isorelax-jaxp-bridge-ILM</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.jopendocument</groupId>
-            <artifactId>isorelax-jaxp-bridge-ILM</artifactId>
-            <version>1.1</version>
+            <groupId>com.thaiopensource</groupId>
+            <artifactId>jing</artifactId>
+            <version>20091111</version>
         </dependency>
         <dependency>
             <groupId>net.jcip</groupId>
@@ -54,7 +59,7 @@
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
-            <version>3.2.20</version>
+            <version>3.2.21</version>
         </dependency>
         <dependency>
             <groupId>org.jopendocument</groupId>
