--- a/.github/workflows/mvn-build-actions.yml
+++ b/.github/workflows/mvn-build-actions.yml
@@ -26,3 +26,6 @@ jobs:
           java-version: '8'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Publish Test Report
+        if: ${{ always() }}
+        uses: scacap/action-surefire-report@v1
