--- a/.github/workflows/build_JDK8.yml
+++ b/.github/workflows/build_JDK8.yml
@@ -1,4 +1,4 @@
-name: Maven build
+name: Build with JDK8
 
 on:
   workflow_dispatch:
@@ -22,20 +22,5 @@ jobs:
       - name: Publish Test Report
         if: ${{ always() }}
         uses: scacap/action-surefire-report@v1
-
-  build-on-jdk11:
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: Publish Test Report
-        if: ${{ always() }}
-        uses: scacap/action-surefire-report@v1
+          check_name: JDK8 result
